--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@ spring.datasource.username=root
 spring.datasource.password=admin
 
 # Hibernate/JPA properties
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.default_schema=graphql
 
